--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -1,5 +1,5 @@
 ---
-title: About Goldydocs
+title: API Documentation for Events Building Blocks
 linkTitle: About
 menu:
   main:
@@ -8,31 +8,16 @@ menu:
 ---
 
 
-{{< blocks/cover title="About Goldydocs" image_anchor="bottom" height="min" >}}
+{{< blocks/cover title="API Documentation Guide for Rokwire" image_anchor="bottom" height="min" >}}
 
-<p class="lead mt-5">A sample site using the Docsy Hugo theme.
+<p class="lead mt-5">Your guide to access the swagger of Event Building Blocks API.
 </p>
 
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
-Goldydocs is a sample site using the <a href="https://github.com/google/docsy">Docsy</a> Hugo theme that shows what it can do and provides you with a template site structure. It’s designed for you to clone and edit as much as you like. See the different sections of the documentation and site for more ideas.
+This website is made using Hugo.
 {{% /blocks/lead %}}
 
 
-{{< blocks/section >}}
-<div class="col-12">
-<h1 class="text-center">This is another section</h1>
-</div>
 
-{{< /blocks/section >}}
-
-
-
-{{< blocks/section >}}
-
-<div class="col-12">
-<h1 class="text-center">This is another section</h1>
-</div>
-
-{{< /blocks/section >}}
